# Asymmetric

./: .gitignore
backend/: .env  config.py  pyproject.toml
backend/infosec_feed_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/: main.py  news.py  reddit.py  telegram.py  x_scraper.py  youtube.py
frontend/: index.html  vite.config.ts
frontend/src/features/feed/: index.tsx
frontend/src/features/feed/components/: NewsPanel.tsx  RedditPanel.tsx  TelegramPanel.tsx  XPanel.tsx
frontend/src/shared/: types.ts
